Mobile menu items spacing fixed

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -23,11 +23,12 @@ button,
 
 .header-container {
     height: 500px;
-    margin: 0 1rem;
+    margin: 0;
     padding-top: 10px;
 }
 
 .logo-and-navbar {
+    padding: 0 1rem;
     display: flex;
     justify-content: space-between;
 }
@@ -61,14 +62,26 @@ button,
     background-color: var(--valhalla);
     width: 100%;
     top: 5.625rem;
+    left: 0;
     z-index: 1;
+    border-top: 1px solid var(--grey);
+    border-bottom: 1px solid var(--grey);
+}
+
+.header-menu ul {
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    /* gap: 1rem; */
+    height: 17.875rem;
+    justify-content: space-evenly;
 }
 
 .header-menu li {
     font-family: "Roboto", sans-serif;
     font-weight: 700;
     font-size: 1rem;
-    height: 3rem;
+    width: 100%;
 }
 
 .menu-opened {
